<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WifiConnector</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="connecting">Connecting...</string>
    <string name="settings">Settings</string>
    <string name="telefonicaPublic">TelefonicaGuest</string>
    <string name="info">Info</string>
    <string name="position_headline">Your position:</string>
    <string name="position_default">Unknown</string>
    <string name="intro">This app will unlock your guest access to TelefonicaGuest.</string>
	<string name="action_refresh">Refresh</string>
    
    <string name="error_check_network">Error checking network status</string>
    
    <string name="phone_not_set">Mobile phone number not set</string>
    <string name="check_settings">Check app settings</string>
    <string name="not_connected">Not connected</string>
    <string name="not_connected_detail">Not connected to TelefonicaGuest</string>
    
    <string name="wifi_ready">TelefonicaGuest ready</string>
    <string name="wifi_locked">TelefonicaGuest locked</string>
    <string name="wifi_ready_detail">Internet access is unlocked</string>
    <string name="wifi_locked_detail">Press connect to unlock</string>
    
    <string name="wifi_submit_msisdn">Unlocking WiFi</string>
    <string name="wifi_submit_msisdn_detail">"Submitting mobile phone number %s"</string>
    <string name="wifi_submitted_msisdn_detail">"Submitted mobile phone number %s"</string>
    <string name="wifi_submit_msisdn_error">Could not submit mobile phone number</string>
    <string name="wifi_submit_msisdn_not_reg">Mobile phone number not registered</string>
    
    <string name="wifi_wait_token">Waiting for login token</string>
    <string name="wifi_received_token">Received token: %s</string>
    <string name="wifi_no_token">Token did not arrive within 15 seconds, please retry!</string>
    <string name="wifi_submit_token">Submitting token: %s</string>
    <string name="wifi_submitted_token">Submitted token: %s</string>
    <string name="wifi_token_error">Could not submit token, please retry</string>
    
    <string name="wifi_disconnect">Logging off</string>
    <string name="wifi_disconnect_detail">Logging off Telefonica WiFi internet access</string>
    <string name="wifi_disconnect_error">Could not log off, please retry</string>
    
    <string name="settings_msisdn">Mobile Number</string>
    <string name="settings_msisdn_detail">Your mobile number in the format +491791234567</string>
    <string name="settings_autoconnect">Automatic connection</string>
    <string name="settings_autoconnect_detail">Connect to TelefonicaGuest automatically</string>
    <string name="settings_autoclearnotification">Don\'t keep notifications</string>
    <string name="settings_autoclearnotification_detail">Remove success notifications automatically</string>
    <string name="settings_smsdelay">Wait for login token</string>
    <string name="settings_smsdelay_detail">How long should we wait for the login token SMS</string>
    <string name="settings_prio">Priority when receiving SMS</string>
    <string name="settings_prio_detail">Don\'t change unless you installed alternative SMS apps which stops WifiConnector working!</string>
    
    <string name="about">About</string>
    <string name="about_ok">OK</string>
    <string name="about_detail">WifiConnector\nCopyright &#169; 2012 Martin Helff\nThis software is distributed under the terms of the GNU General Public License v3\nhttps://github.com/mhelff/wificonnector/</string>

    <string name="signup_text">Since this app is not available in the Android Market, you might be interested to receive new versions by eMail. Just click on the sign up button below and send me a email to stay up to date!</string>
    <string name="signup_button">Sign-Up now!</string>
    <string name="send">Send</string>
    
    <string name="printers">Printers</string>
    <string name="printer_notfound">No printers found</string>
    <string name="printer_color">Color</string>
    <string name="printer_size">Size A3</string>
    <string name="printer_copy">Copier</string>
    <string name="printer_found">Printers near to you:</string>
    <string name="printer_location">Location:</string>
    <string name="printer_distance">Distance:</string>
    
    <string name="crash_toast_text">WifiConnector crash report</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    <string name="WIFI_LOC_WA1">West</string>
    <string name="WIFI_LOC_WA2">Middle</string>
    <string name="WIFI_LOC_WA3">East</string>
    
    <string name="WIFI_LOC_WB1">West</string>
    <string name="WIFI_LOC_WB2">East</string>
    
    <string name="WIFI_LOC_WC1">North</string>
    <string name="WIFI_LOC_WC2">South</string>
    
    <string name="WIFI_LOC_WD1">North</string>
    <string name="WIFI_LOC_WD2">South</string>
    
    <string name="WIFI_LOC_WE1">North</string>
    <string name="WIFI_LOC_WE2">South</string>
    
    <string-array name="navigation_array">
        <item>Printers</item>
        <item>Wifi-Login</item>
    </string-array>
</resources>