<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/postionheadtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/position_headline"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/position_default"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ToggleButton
            android:id="@+id/colorSwitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/printer_color"
            android:textOff="@string/printer_color"
            android:textOn="@string/printer_color" />

        <ToggleButton
            android:id="@+id/sizeSwitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/printer_size"
            android:textOff="@string/printer_size"
            android:textOn="@string/printer_size" />

        <ToggleButton
            android:id="@+id/copySwitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/printer_copy"
            android:textOn="@string/printer_copy"
            android:textOff="@string/printer_copy" />
    </LinearLayout>

    <ListView
        android:id="@+id/printerList"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </ListView>

</LinearLayout>